Reslves: tdf#119212 sort character sets

and save useritem

Change-Id: I92f00bd982ab00571148c0e74cd9c8772451a246
Reviewed-on: https://gerrit.libreoffice.org/58922
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>